--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,11 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Contactanos</h1>
+  <h1>CONTACT</h1>
   
-  <p>Descripcion</p>
+  <p>Esta es la historia de la empresa de nuevo mexico</p>
+  
+
+  
 </body>
 </html>
